# Veritas.jl

./: .gitignore  Project.toml  README.md  block_theme.blend  ex.v  setup.jl
Veritas/: Project.toml  example.jl
Veritas/src/: Cleaner.jl  Context.jl  Encoder.jl  Output.jl  Parser.jl  Veritas.jl  proprocess.jl
Veritas/src/encoding/: Encoder.jl  SMT.jl
Veritas/src/validation/: analysis.jl  smtlib.jl
VeritasAnnotations/: Project.toml
VeritasAnnotations/src/: VeritasAnnotations.jl
ex/: divide.jl  factorial.jl
src/: Veritas.jl  output.jl  preprocess.jl  veritas.jl
src/validation/: analyzer.jl  smtlib.jl
theory/: multiple_dispatch.md
veritas/: dune-project  veritas.opam
veritas/lib/: dune
veritas/test/: dune
veritas/theories/objects/: numbers.v  string.v
